# brainfuck

./: Cargo.toml  README.md
assets/: brainfuck.bf  test.bf
benches/: mandelbrot.rs
src/: bin.rs  interpreter.rs  main.rs  optimizer.rs  parser.rs
src/lib/: lib.rs  optimizer.rs  parser.rs
